# voxtera

./: .gitignore  CHANGELOG.md  Cargo.toml  GAMEPLAY_IMPROVEMENTS.md  VOXTERA_MULTIPLAYER_ROADMAP.md  supabase_schema.sql
.github/workflows/: release.yml
.hermes/plans/: 2026-07-20_160000-voxtera-improvements.md
.mimocode/plans/: 1784494057164-witty-eagle.md
assets/voxygen/shaders/: figure-frag.glsl  skybox-frag.glsl  terrain-frag.glsl
brand/: README.md  tokens.json
client/: Cargo.toml
client/src/: lib.rs  supabase_auth.rs
common/src/comp/: misc.rs  mod.rs  visual.rs
docs/superpowers/plans/: 2026-07-18-windows-bootstrap.md  2026-07-21-tauri-launcher.md  2026-07-21-voxtera-website.md
docs/superpowers/specs/: 2026-07-18-windows-bootstrap-design.md  2026-07-21-launcher-site-design.md
launcher/: VoxteraLauncher.spec  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  voxtera_config.json  voxtera_launcher.py
launcher/src/: App.test.tsx  App.tsx  platform.test.ts
launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: archive.rs  commands.rs  config.rs  domain.rs  download.rs  error.rs  events.rs  game.rs  install.rs  integrity.rs  lib.rs  main.rs  manifest.rs  paths.rs  pending_install.rs  progress.rs  release.rs  repair.rs  service.rs  target_contract.rs
launcher/src-tauri/tests/: config_tests.rs  download_tests.rs  game_tests.rs  install_tests.rs  integrity_tests.rs  manifest_tests.rs  release_tests.rs  repair_tests.rs  service_tests.rs
launcher/src-tauri/tests/fixtures/: manifest.golden.json  releases.json
launcher/src-tauri/tests/support/: http_server.rs  mod.rs
launcher/src/styles/: global.css  tokens.css
scripts/windows/: Bootstrap.Common.psm1  README.md  bootstrap.ps1  doctor.ps1  packages.psd1
scripts/windows/tests/: Bootstrap.Tests.ps1  Common.Tests.ps1  Doctor.Tests.ps1  Installer.Tests.ps1  TestHarness.psm1  run-tests.ps1
server/: Cargo.toml
server-cli/src/: cli.rs
server/src/: audit_log.rs  client.rs  friends.rs  lib.rs  login_provider.rs  starter_kits.rs  supabase_db.rs  welcome.rs
server/src/events/: entity_creation.rs  entity_manipulation.rs  player.rs
server/src/settings/: mod.rs  server_description.rs
voxygen/: Cargo.toml
voxygen/src/: cmd.rs  game_input.rs  main.rs  panic_handler.rs  window.rs
voxygen/src/ecs/: mod.rs
(+40 files in other folders)
