[package]
name = "voxtera-launcher"
version = "0.3.0-preview.1"
edition = "2024"
license = "GPL-3.0-or-later"
default-run = "voxtera-launcher"

[lib]
name = "launcher_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
clap = { version = "4.6.4", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tauri = { version = "2.11.5", features = [] }
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
futures-util = "0.3.33"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dev-dependencies]
axum = "0.8.9"
tempfile = "3.23.0"

[lints.rust]
linker_messages = "allow"

[workspace]
